# edge-ai

./: .gitignore  main.py  pyproject.toml  requirements.txt
fundamentals/: 01_chat_bootstrap.py  02_rag_eval_ragas.py  03_rag_pipeline.py  04_benchmark_open_source_models.py  model_quantization.py
