[project]
name = "edge-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "pinstinct",email = "contact@limhm.dev"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
